# ReliefDrone

Drone Tower App/: towerdevkey.jks
Human Detection/: CMakeLists.txt  test.cpp
flightscripts/: vehicle_location.py
